--- a/templates/index.html
+++ b/templates/index.html
@@ -29,16 +29,10 @@
                 <li> <a href="https://github.com/OttoJursch">Github</a></li>
                 <li> <a href="tuas.ucsd.edu">LinkedIn</a></li>
                 <li> <a href="https://www.goodreads.com/user/show/85927261-otoo-jaursk">Goodreads</a></li>
-                <li> <a href="https://www.goodreads.com/user/show/85927261-otoo-jaursk">.vimrc</a></li>
+                <li> <a href="static/.vimrc">.vimrc</a></li>
                 <li> <a href="http://jursch.com">My Grandpas Website</a></li>
             </ul>
             </div>
         </div>
-        <h3> About this Website </h3>
-        <p>
-            The main purpose of this website is to show off my incredible front
-            end design and React.js skills, and how they can be used to achieve a
-            linear algebra professor aesthetic. 
-        </p>
     </body>
 </html>
